Add empanada steps and credit to recipe author

--- a/recipes/empanadas.html
+++ b/recipes/empanadas.html
@@ -39,6 +39,19 @@
         <li>One egg, beaten for egg wash</li>
     </ul>
 
+    <h4>Steps</h4>
+    <ol>
+        <li>Pulse the flour and salt in a food processor. Add the butter, 1 large egg and ice water, pulsing until the mixture resembles coarse crumbs. Shape the dough into a ball. Tightly cover the dough in plastic wrap and place in the refrigerator for at least 30 minutes.</li>
+        <li>Fill a medium size pot 3/4 full with water and bring to a boil. Add the cubed potato to the pot and boil until tender, about 3 minutes.</li>
+        <li>Meanwhile, in a large skillet set over medium, heat the olive oil until shimmering. Add the ground beef along with the onions, celery and carrots. Cook until the beef is browned and vegetables are softened, about 8 minutes. Once potatoes are cooked, drain and add them to the ground beef mixture.</li>
+        <li>Add the garlic, chili powder, cumin, cinnamon and beef broth, cook 1 minute longer until spices are fragrant. Add and peas and simmer over medium heat until everything is fully incorporated and most of the liquid has been absorbed. Season with salt and pepper.</li>
+        <li>Preheat oven to 375°F and place rack into the center of the oven.</li>
+        <li>Remove dough from refrigerator and divide it into 10 equal part—roughly 2.2 oz each. Roll each piece of dough very thin on a lightly floured surface until you have a circle roughly 7” wide. Working with one at a time add a heaping 1/3 cup of filling onto one side of the dough.</li>
+        <li>In a small bowl, mix together the beaten egg with 1 tablespoon of water. Wet a pastry brush with egg wash and dampen the inside ¼ inch edge of the dough. Fold the dough in half over the filling. Using a fork, firmly press the edges together. Repeat this process with remaining dough and filling and arrange on a parchment lined baking sheet.</li>
+        <li>Brush the tops of each empanada with the egg wash until coated. Bake for 35 min or until golden brown.</li>
+    </ol>
+    
+<p>Credit for this recipe goes to <a href="https://themodernproper.com/beef-empanadas">The Modern Proper</a></p>
 
 </body>
 </html>
