Add instructions & image to flan.html
- Add instructions, image, and ingredients to flan recipe
- Resized empanada image
- Add credit for flan recipe

--- a/recipes/empanadas.html
+++ b/recipes/empanadas.html
@@ -8,7 +8,7 @@
 <body>
 
     <h1>Empanadas</h1>
-    <img src="../images/empanadas.jpg" alt="Beef empanadas on a plate">
+    <img src="../images/empanadas.jpg" alt="Beef empanadas on a plate" withd="500" height="500">
 
     <h3>Description</h3>
     <p>An empanada is a fried pastry stuffed with meat and/or vegetables. The dish is commonplace in many Central and South American countries.</p>
