--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
 
     <h1>Odin Recipes</h1>
-    <a href="./images/empanadas.html">Empanadas</a>
+    <ul>
+        <li><a href="./recipes/empanadas.html">Empanadas</a></li>
+        <li><a href="./recipes/flan.html">Flan</a></li>
 
 </body>
 </html>
