--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <ul>
         <li><a href="./recipes/empanadas.html">Empanadas</a></li>
         <li><a href="./recipes/flan.html">Flan</a></li>
-
+        <li><a href="./recipes/tamales.html">Tamales</a></li>
 </body>
 </html>
