--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Recipes Homepage</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-    <h1>Odin Recipes</h1>
+    <h1 class="title">Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/empanadas.html">Empanadas</a></li>
-        <li><a href="./recipes/flan.html">Flan</a></li>
-        <li><a href="./recipes/tamales.html">Tamales</a></li>
+        <li class="empanadas link"><a href="./recipes/empanadas.html">Empanadas</a></li>
+        <li class="flan link"><a href="./recipes/flan.html">Flan</a></li>
+        <li class="tamales link"><a href="./recipes/tamales.html">Tamales</a></li>
 </body>
 </html>
