--- a/recipes/empanadas.html
+++ b/recipes/empanadas.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Empanadas Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
 
-    <h1>Empanadas</h1>
-    <img src="../images/empanadas.jpg" alt="Beef empanadas on a plate" withd="500" height="500">
+    <h1 class="title">Empanadas</h1>
+    <img src="../images/empanadas.jpg" class="img" alt="Beef empanadas on a plate">
 
     <h3>Description</h3>
     <p>An empanada is a fried pastry stuffed with meat and/or vegetables. The dish is commonplace in many Central and South American countries.</p>
