--- a/recipes/tamales.html
+++ b/recipes/tamales.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Tamales</title>
 </head>
 <body>
-    <h1>Tamales</h1>
-    <img src="../images/tamales.jpg" alt="A pyramid of tamales with some herbs in the foreground." width="600" height="400">
+    <h1 class="title">Tamales</h1>
+    <img src="../images/tamales.jpg" class="tamales img" alt="A pyramid of tamales with some herbs in the foreground.">
 
     <h3>Ingredients</h3>
     <h5>Braised Pork</h5>
