--- a/recipes/flan.html
+++ b/recipes/flan.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Flan</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
-    <h1>Flan</h1>
-    <img src="../images/flan.jpg" alt="A picture of flan on a white plate." width="500" height="500">
+    <h1 class="title">Flan</h1>
+    <img src="../images/flan.jpg" class="flan img" alt="A picture of flan on a white plate.">
 
     <h3>Description</h3>
     <p>Flan is a caramel topped custard that originated from Southern Europe. It is now very popular in Latin America.</p>
