Improve readability within instructions
- Change "steps" to "instructions" in tamales
- Center images on all pages
- Add bottom border for all titles
- Add white border for all images
- Increase line height for <ol> "instructions"

--- a/recipes/flan.html
+++ b/recipes/flan.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1 class="title">Flan</h1>
-    <img src="../images/flan.jpg" class="flan img" alt="A picture of flan on a white plate.">
+    <img src="../images/flan.jpg" class="flan" alt="A picture of flan on a white plate.">
 
     <h3>Description</h3>
     <p>Flan is a caramel topped custard that originated from Southern Europe. It is now very popular in Latin America.</p>
@@ -26,7 +26,7 @@
         </ul>
 
     <h3>Instructions</h3>
-        <ol>
+        <ol class="instructions">
             <li>Using six 6-ounce molds, place them in a baking pan at least 2 inches deep</li>
             <li>Place 3/4 cup sugar and water in a small saucepan, bring to a boil, continue cooking until an amber color</li>
             <li>Immediately and carefully pour the hot sugar into the molds</li>
