--- a/recipes/tamales.html
+++ b/recipes/tamales.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 class="title">Tamales</h1>
-    <img src="../images/tamales.jpg" class="tamales img" alt="A pyramid of tamales with some herbs in the foreground.">
+    <img src="../images/tamales.jpg" class="tamales" alt="A pyramid of tamales with some herbs in the foreground.">
 
     <h3>Ingredients</h3>
     <h5>Braised Pork</h5>
@@ -40,7 +40,7 @@
         <li>Lime wedges, for serving, optional</li>
     </ul>
     <h3>Instructions</h3>
-    <ol>
+    <ol class="instructions">
         <li>For the braised pork: Heat the oil in a large Dutch oven over medium-high heat. Add the onion, 1/4 teaspoon salt and a few grinds black pepper and cook until just tender, about 5 minutes. Add the chicken broth and guajillo, ancho and pasilla chiles and bring to a boil. Cover, turn off the heat and let sit until the chiles have softened, about 10 minutes. Transfer to a blender with the cumin, oregano, garlic, 2 teaspoons salt and a few grinds black pepper and puree until very smooth.</li>
         <li>Pour the sauce back into the Dutch oven, then add the pork and bay leaves. Cover and bring to a boil over medium-high heat. Reduce the heat to medium low to maintain a steady simmer and cook until the pork is very tender and the sauce is brick red, 1 hour 45 minutes to 2 hours.  </li>
         <li>Meanwhile, soak the corn husks in a bowl of hot water, using a plate to keep them submerged, until pliable, about 1 hour. </li>
