--- a/recipes/empanadas.html
+++ b/recipes/empanadas.html
@@ -9,7 +9,7 @@
 <body>
 
     <h1 class="title">Empanadas</h1>
-    <img src="../images/empanadas.jpg" class="img" alt="Beef empanadas on a plate">
+    <img src="../images/empanadas.jpg" class="empanadas" alt="Beef empanadas on a plate">
 
     <h3>Description</h3>
     <p>An empanada is a fried pastry stuffed with meat and/or vegetables. The dish is commonplace in many Central and South American countries.</p>
@@ -40,7 +40,7 @@
         <li>One egg, beaten for egg wash</li>
     </ul>
 
-    <h4>Steps</h4>
+    <h4>Instructions</h4>
     <ol>
         <li>Pulse the flour and salt in a food processor. Add the butter, 1 large egg and ice water, pulsing until the mixture resembles coarse crumbs. Shape the dough into a ball. Tightly cover the dough in plastic wrap and place in the refrigerator for at least 30 minutes.</li>
         <li>Fill a medium size pot 3/4 full with water and bring to a boil. Add the cubed potato to the pot and boil until tender, about 3 minutes.</li>
